cbits/Bullet.h

void btRaycastVehicle_defaultInit(void *c,void* p0); //method: defaultInit void ( ::btRaycastVehicle::* )( ::btRaycastVehicle::btVehicleTuning const & ) 
void btRaycastVehicle_getWheelTransformWS(void *c,int p0,float* ret); //method: getWheelTransformWS ::btTransform const & ( ::btRaycastVehicle::* )( int ) const
void* btRaycastVehicle_addWheel(void *c,float* p0,float* p1,float* p2,float p3,float p4,void* p5,int p6); //method: addWheel ::btWheelInfo & ( ::btRaycastVehicle::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btScalar,::btScalar,::btRaycastVehicle::btVehicleTuning const &,bool ) 
void btRaycastVehicle_updateWheelTransform(void *c,int p0,int p1); //method: updateWheelTransform void ( ::btRaycastVehicle::* )( int,bool ) 
void btRaycastVehicle_setUserConstraintId(void *c,int p0); //method: setUserConstraintId void ( ::btRaycastVehicle::* )( int ) 
int btRaycastVehicle_getNumWheels(void *c); //method: getNumWheels int ( ::btRaycastVehicle::* )(  ) const
float btRaycastVehicle_rayCast(void *c,void* p0); //method: rayCast ::btScalar ( ::btRaycastVehicle::* )( ::btWheelInfo & ) 
int btRaycastVehicle_getRightAxis(void *c); //method: getRightAxis int ( ::btRaycastVehicle::* )(  ) const
void btRaycastVehicle_applyEngineForce(void *c,float p0,int p1); //method: applyEngineForce void ( ::btRaycastVehicle::* )( ::btScalar,int ) 
void btRaycastVehicle_getForwardVector(void *c,float* ret); //method: getForwardVector ::btVector3 ( ::btRaycastVehicle::* )(  ) const
void* btRaycastVehicle_getWheelInfo(void *c,int p0); //method: getWheelInfo ::btWheelInfo const & ( ::btRaycastVehicle::* )( int ) const
void* btRaycastVehicle_getWheelInfo0(void *c,int p0); //method: getWheelInfo ::btWheelInfo const & ( ::btRaycastVehicle::* )( int ) const
void* btRaycastVehicle_getWheelInfo1(void *c,int p0); //method: getWheelInfo ::btWheelInfo & ( ::btRaycastVehicle::* )( int ) 
void btRaycastVehicle_getChassisWorldTransform(void *c,float* ret); //method: getChassisWorldTransform ::btTransform const & ( ::btRaycastVehicle::* )(  ) const
void btRaycastVehicle_updateWheelTransformsWS(void *c,void* p0,int p1); //method: updateWheelTransformsWS void ( ::btRaycastVehicle::* )( ::btWheelInfo &,bool ) 
void btRaycastVehicle_resetSuspension(void *c); //method: resetSuspension void ( ::btRaycastVehicle::* )(  ) 
void btRaycastVehicle_setCoordinateSystem(void *c,int p0,int p1,int p2); //method: setCoordinateSystem void ( ::btRaycastVehicle::* )( int,int,int ) 
void btRaycastVehicle_setUserConstraintType(void *c,int p0); //method: setUserConstraintType void ( ::btRaycastVehicle::* )( int ) 
void btRaycastVehicle_debugDraw(void *c,void* p0); //method: debugDraw void ( ::btRaycastVehicle::* )( ::btIDebugDraw * ) 
void btRaycastVehicle_updateFriction(void *c,float p0); //method: updateFriction void ( ::btRaycastVehicle::* )( ::btScalar ) 
int btRaycastVehicle_getForwardAxis(void *c); //method: getForwardAxis int ( ::btRaycastVehicle::* )(  ) const
float btRaycastVehicle_getSteeringValue(void *c,int p0); //method: getSteeringValue ::btScalar ( ::btRaycastVehicle::* )( int ) const
int btRaycastVehicle_getUserConstraintType(void *c); //method: getUserConstraintType int ( ::btRaycastVehicle::* )(  ) const
int btRaycastVehicle_getUpAxis(void *c); //method: getUpAxis int ( ::btRaycastVehicle::* )(  ) const
void btRaycastVehicle_setPitchControl(void *c,float p0); //method: setPitchControl void ( ::btRaycastVehicle::* )( ::btScalar ) 