Physics/Bullet/Raw/BulletDynamics/Vehicle.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#74>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_defaultInit as btRaycastVehicle_defaultInit    `( BtRaycastVehicleClass bc , BtRaycastVehicle_btVehicleTuningClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ tuning
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#111>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getWheelTransformWS as btRaycastVehicle_getWheelTransformWS    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ wheelIndex
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#117>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_addWheel as btRaycastVehicle_addWheel    `( BtRaycastVehicleClass bc , BtRaycastVehicle_btVehicleTuningClass p5 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ connectionPointCS0
, withVec3* `Vec3'  peekVec3* -- ^ wheelDirectionCS0
, withVec3* `Vec3'  peekVec3* -- ^ wheelAxleCS
,  `Float'  -- ^ suspensionRestLength
,  `Float'  -- ^ wheelRadius
, withBt* `p5'  -- ^ tuning
,  `Bool'  -- ^ isFrontWheel
 } ->  `BtWheelInfo'  mkBtWheelInfo* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#117>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_addWheel as btRaycastVehicle_addWheel'    `( BtRaycastVehicleClass bc , BtRaycastVehicle_btVehicleTuningClass p5 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ connectionPointCS0
, allocaVec3-  `Vec3'  peekVec3* -- ^ wheelDirectionCS0
, allocaVec3-  `Vec3'  peekVec3* -- ^ wheelAxleCS
,  `Float'  -- ^ suspensionRestLength
,  `Float'  -- ^ wheelRadius
, withBt* `p5'  -- ^ tuning
,  `Bool'  -- ^ isFrontWheel
 } ->  `BtWheelInfo'  mkBtWheelInfo* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#113>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_updateWheelTransform as btRaycastVehicle_updateWheelTransform    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ wheelIndex
,  `Bool'  -- ^ interpolatedTransform
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#209>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_setUserConstraintId as btRaycastVehicle_setUserConstraintId    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ uid
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#119>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getNumWheels as btRaycastVehicle_getNumWheels    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#97>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_rayCast as btRaycastVehicle_rayCast    `( BtRaycastVehicleClass bc , BtWheelInfoClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ wheel
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#156>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getRightAxis as btRaycastVehicle_getRightAxis    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_applyEngineForce as btRaycastVehicle_applyEngineForce    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ force
,  `Int'  -- ^ wheel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#172>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getForwardVector as btRaycastVehicle_getForwardVector    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#126>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getWheelInfo0 as btRaycastVehicle_getWheelInfo    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtWheelInfo'  mkBtWheelInfo* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#126>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getWheelInfo0 as btRaycastVehicle_getWheelInfo0    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtWheelInfo'  mkBtWheelInfo* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#128>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getWheelInfo1 as btRaycastVehicle_getWheelInfo1    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtWheelInfo'  mkBtWheelInfo* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getChassisWorldTransform as btRaycastVehicle_getChassisWorldTransform    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#130>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_updateWheelTransformsWS as btRaycastVehicle_updateWheelTransformsWS    `( BtRaycastVehicleClass bc , BtWheelInfoClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ wheel
,  `Bool'  -- ^ interpolatedTransform
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#102>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_resetSuspension as btRaycastVehicle_resetSuspension    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#190>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_setCoordinateSystem as btRaycastVehicle_setCoordinateSystem    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ rightIndex
,  `Int'  -- ^ upIndex
,  `Int'  -- ^ forwardIndex
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#204>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_setUserConstraintType as btRaycastVehicle_setUserConstraintType    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ userConstraintType
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_debugDraw as btRaycastVehicle_debugDraw    `( BtRaycastVehicleClass bc , BtIDebugDrawClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ debugDrawer
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#142>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_updateFriction as btRaycastVehicle_updateFriction    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#165>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getForwardAxis as btRaycastVehicle_getForwardAxis    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#104>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getSteeringValue as btRaycastVehicle_getSteeringValue    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ wheel
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#199>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getUserConstraintType as btRaycastVehicle_getUserConstraintType    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#160>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_getUpAxis as btRaycastVehicle_getUpAxis    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#135>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
{#fun btRaycastVehicle_setPitchControl as btRaycastVehicle_setPitchControl    `( BtRaycastVehicleClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ pitch
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.h?r=2223#185>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp?r=2223>
-}
